Feat - delete message

--- a/WhatsGoingNearby/Localize/Localizable.xcstrings
+++ b/WhatsGoingNearby/Localize/Localizable.xcstrings
@@ -536,6 +536,9 @@
         }
       }
     },
+    "Delete Message" : {
+
+    },
     "Delete Post" : {
       "localizations" : {
         "pt-BR" : {
