--- a/WhatsGoingNearby/Localize/Localizable.xcstrings
+++ b/WhatsGoingNearby/Localize/Localizable.xcstrings
@@ -1369,6 +1369,9 @@
         }
       }
     },
+    "Reply Message" : {
+
+    },
     "Replying to %@" : {
       "localizations" : {
         "pt-BR" : {
@@ -1378,6 +1381,9 @@
           }
         }
       }
+    },
+    "Replying to:" : {
+
     },
     "Report" : {
       "localizations" : {
