Add attachments to MessageScreen

--- a/WhatsGoingNearby/Localize/Localizable.xcstrings
+++ b/WhatsGoingNearby/Localize/Localizable.xcstrings
@@ -1520,6 +1520,7 @@
 
     },
     "Interact with people 🌐" : {
+      "extractionState" : "stale",
       "localizations" : {
         "pt-BR" : {
           "stringUnit" : {
@@ -1534,6 +1535,9 @@
           }
         }
       }
+    },
+    "Interact with people 🥳" : {
+
     },
     "Just chatting" : {
       "localizations" : {
