--- a/WhatsGoingNearby/Localize/Localizable.xcstrings
+++ b/WhatsGoingNearby/Localize/Localizable.xcstrings
@@ -2422,6 +2422,7 @@
       }
     },
     "Replying to:" : {
+      "extractionState" : "stale",
       "localizations" : {
         "pt-BR" : {
           "stringUnit" : {
