Add Age Range Slider to DiscoverPreferencesView

--- a/WhatsGoingNearby/Localize/Localizable.xcstrings
+++ b/WhatsGoingNearby/Localize/Localizable.xcstrings
@@ -4,6 +4,9 @@
     "" : {
 
     },
+    " to " : {
+
+    },
     " your " : {
       "extractionState" : "stale",
       "localizations" : {
@@ -89,15 +92,11 @@
         }
       }
     },
-    "%lld - %lld" : {
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "new",
-            "value" : "%1$lld - %2$lld"
-          }
-        }
-      }
+    "%lf" : {
+
+    },
+    "%lld" : {
+
     },
     "%lld %@%@ to expire" : {
       "extractionState" : "stale",
@@ -1348,9 +1347,6 @@
         }
       }
     },
-    "Everyone" : {
-
-    },
     "Expired" : {
       "localizations" : {
         "pt-BR" : {
@@ -1366,9 +1362,6 @@
           }
         }
       }
-    },
-    "Female" : {
-
     },
     "Find Connections" : {
 
@@ -1458,6 +1451,9 @@
           }
         }
       }
+    },
+    "From " : {
+
     },
     "Full name" : {
       "localizations" : {
@@ -1836,9 +1832,6 @@
         }
       }
     },
-    "Male" : {
-
-    },
     "Map" : {
       "localizations" : {
         "pt-BR" : {
@@ -1915,6 +1908,15 @@
           }
         }
       }
+    },
+    "My Age" : {
+
+    },
+    "My Display Name" : {
+
+    },
+    "My Profile" : {
+
     },
     "Name" : {
       "extractionState" : "stale",
@@ -2716,6 +2718,9 @@
           }
         }
       }
+    },
+    "Set Profile" : {
+
     },
     "Settings" : {
       "localizations" : {
@@ -3547,9 +3552,6 @@
           }
         }
       }
-    },
-    "Your Profile" : {
-
     },
     "Your profile was successfully updated." : {
       "localizations" : {
