--- a/WhatsGoingNearby/Localize/Localizable.xcstrings
+++ b/WhatsGoingNearby/Localize/Localizable.xcstrings
@@ -56,6 +56,12 @@
         }
       }
     },
+    "· %@" : {
+
+    },
+    "· %lld years old" : {
+
+    },
     "@%@" : {
       "localizations" : {
         "pt-BR" : {
@@ -65,6 +71,9 @@
           }
         }
       }
+    },
+    "**%lld**" : {
+
     },
     "%@" : {
 
@@ -91,9 +100,6 @@
           }
         }
       }
-    },
-    "%lf" : {
-
     },
     "%lld" : {
 
@@ -271,6 +277,12 @@
           }
         }
       }
+    },
+    "18" : {
+
+    },
+    "99" : {
+
     },
     "Account Deletion" : {
       "localizations" : {
@@ -1240,6 +1252,9 @@
         }
       }
     },
+    "Edit this info in your profile settings." : {
+
+    },
     "Enable Location Service" : {
       "localizations" : {
         "pt-BR" : {
@@ -1362,6 +1377,9 @@
           }
         }
       }
+    },
+    "Filters" : {
+
     },
     "Find Connections" : {
 
@@ -1509,6 +1527,9 @@
         }
       }
     },
+    "Hide Account" : {
+
+    },
     "Hide location" : {
       "localizations" : {
         "pt-BR" : {
@@ -1535,6 +1556,9 @@
           }
         }
       }
+    },
+    "Hiding Account" : {
+
     },
     "Hungry" : {
       "localizations" : {
@@ -1771,6 +1795,9 @@
         }
       }
     },
+    "Loading..." : {
+
+    },
     "Location 📍" : {
       "localizations" : {
         "pt-BR" : {
@@ -1910,9 +1937,6 @@
       }
     },
     "My Age" : {
-
-    },
-    "My Display Name" : {
 
     },
     "My Profile" : {
@@ -2619,6 +2643,9 @@
     "Save Preferences" : {
 
     },
+    "Saving..." : {
+
+    },
     "Search Around You" : {
 
     },
@@ -2718,9 +2745,6 @@
           }
         }
       }
-    },
-    "Set Profile" : {
-
     },
     "Settings" : {
       "localizations" : {
@@ -2984,6 +3008,9 @@
           }
         }
       }
+    },
+    "These help us show you people who fit your preferences." : {
+
     },
     "This message was not sent" : {
       "localizations" : {
@@ -3261,6 +3288,9 @@
           }
         }
       }
+    },
+    "We'll match you with people who are interested in your gender and age." : {
+
     },
     "What type of issue are you reporting?" : {
       "localizations" : {
