--- a/WhatsGoingNearby/Localize/Localizable.xcstrings
+++ b/WhatsGoingNearby/Localize/Localizable.xcstrings
@@ -1378,6 +1378,9 @@
         }
       }
     },
+    "Female" : {
+
+    },
     "Filters" : {
 
     },
@@ -1489,9 +1492,6 @@
         }
       }
     },
-    "Gender" : {
-
-    },
     "Gravador de Áudio" : {
 
     },
@@ -1591,6 +1591,12 @@
           }
         }
       }
+    },
+    "I'm a..." : {
+
+    },
+    "I'm interested in..." : {
+
     },
     "If you quit this screen, you will lose your changes." : {
       "localizations" : {
@@ -1692,9 +1698,6 @@
           }
         }
       }
-    },
-    "Interested In" : {
-
     },
     "Invalid username format." : {
       "localizations" : {
@@ -1858,6 +1861,9 @@
           }
         }
       }
+    },
+    "Male" : {
+
     },
     "Map" : {
       "localizations" : {
@@ -3075,6 +3081,12 @@
           }
         }
       }
+    },
+    "Trans Female" : {
+
+    },
+    "Trans Male" : {
+
     },
     "Try again" : {
       "localizations" : {
